- wxCheckListBox::Check() doesn't send CHECKLISTBOX_TOGGLE event any more
- fixed bug with wxTR_EDIT_LABELS not workign with wxTR_MULTIPLE

All:

- Implemented GetEditControl for wxGenericTreeCtrl (Peter Stieber)
- Improved contrib/utils/convertrc parsing (David J. Cooke)
- Fixed handling of URLs and filenames in wxFileSystem
- Implemented alignment for wxGrid bool editor and renderer

OLD CHANGES
===========

INCOMPATIBLE CHANGES SINCE 2.2.x
================================

    Please take a few minutes to read the following list, especially
    paying attention to the most important changes which are marked
    with '!' in the first column.

    Also please note that you should ensure that WXWIN_COMPATIBILITY_2_2
    is defined to 1 if you wish to retain maximal compatibility with 2.2
    series -- however you are also strongly encouraged to try to compile
    your code without this define as it won't be default any longer in
    2.6 release.

    NB: if you want to build your program with different major versions
        of wxWindows you will probably find the wxCHECK_VERSION() macro
        (see the documentation) useful.


wxBase:

! wxArray<T>::Remove(size_t) has been removed to fix compilation problems
  under 64 bit architectures, please replace it with RemoveAt() in your
  code.

! wxArray<T> macros have been changed to fix runtime problems under 64 bit
  architectures and as a side effect of this WX_DEFINE_ARRAY() can only be
  used now for the pointer types, WX_DEFINE_ARRAY_INT should be used for the
  arrays containing non-pointers.

- wxObject::CopyObject() and Clone() methods were removed because they
  simply don't make sense for all objects

- wxEvent now has a pure virtual Clone() method which must be implemented
  by all derived classes, if you have user-defined event classes please
  add "wxEvent *Clone() const { return new MyEvent(*this); }" line to them

- small change to wxStopWatch::Pause() semantics, please see the documentation
